@@ -3439,6 +3439,7 @@ GEN     deg2pol_shallow(GEN x2, GEN x1, GEN x0,long v);
 long    degree(GEN x);
 GEN     denom(GEN x);
 GEN     denom_i(GEN x);
+GEN     denominator(GEN x, GEN D);
 GEN     deriv(GEN x, long v);
 GEN     derivser(GEN x);
 GEN     diffop(GEN x, GEN v, GEN dv);
@@ -3534,6 +3535,7 @@ GEN     modRr_safe(GEN x, GEN y);
 GEN     mulreal(GEN x, GEN y);
 GEN     numer(GEN x);
 GEN     numer_i(GEN x);
+GEN     numerator(GEN x, GEN D);
 long    padicprec(GEN x, GEN p);
 long    padicprec_relative(GEN x);
 GEN     polcoef(GEN x, long n, long v);
@@ -4422,6 +4424,7 @@ GEN     FpV_factorback(GEN L, GEN e, GEN p);
 GEN     Q_content(GEN x);
 GEN     Q_content_safe(GEN x);
 GEN     Q_denom(GEN x);
+GEN     Q_denom_safe(GEN x);
 GEN     Q_div_to_int(GEN x, GEN c);
 GEN     Q_gcd(GEN x, GEN y);
 GEN     Q_mul_to_int(GEN x, GEN c);
@@ -4461,6 +4464,7 @@ GEN     centermod(GEN x, GEN p);
 GEN     centermod_i(GEN x, GEN p, GEN ps2);
 GEN     centermodii(GEN x, GEN p, GEN po2);
 GEN     content(GEN x);
+GEN     content0(GEN x, GEN D);
 GEN     deg1_from_roots(GEN L, long v);
 GEN     factor(GEN x);
 GEN     factor0(GEN x,long flag);
