@@ -1,3 +1,22 @@
+denominator
+1
+1
+1
+3
+1
+6
+1
+3
+1
+1
+x
+error("incorrect type in denom (t_QFI).")
+error("incorrect type in denom (t_QFR).")
+4
+2
+1
+1
+(x)->denominator(x,1)
 1
 1
 1
@@ -6,13 +25,34 @@
 6
 1
 1
+2
 1
 1
-x
-error("incorrect type in denom (t_QFI).")
-error("incorrect type in denom (t_QFR).")
+1
+1
 4
 2
+2
+2
+(x)->denominator(x,'y)
+1
+1
+1
+1
+1
+1
+1
+1
+1
+1
+1
+1
+1
+1
+1
+2*y
+2*y
+numerator
 2
 1.0000000000000000000000000000000000000
 Mod(1, 3)
@@ -28,6 +68,45 @@ error("incorrect type in numer (t_QFI).")
 error("incorrect type in numer (t_QFR).")
 [8, 3]
 [2, 4; 3, 8]
+1/y*x + 1/2
+[1/y*x + 1/2]
+(x)->numerator(x,1)
+2
+1.0000000000000000000000000000000000000
+Mod(1, 3)
+2
+x
+3 + 2*I
+O(2^-3)
+1/3*w
+Mod(x, x^2)
+2*x
+2/x
+Qfb(1, 2, 4)
+Qfb(-1, 2, 4, 0.E-38)
+[8, 3]
+[2, 4; 3, 8]
+2/y*x + 1
+[2/y*x + 1]
+(x)->numerator(x,'y)
+2
+1.0000000000000000000000000000000000000
+Mod(1, 3)
+2/3
+x
+(1/2 + 1/3*I)
+O(2^-3)
+1/3*w
+Mod(1/2*x, x^2)
+2*x
+2/x
+Qfb(1, 2, 4)
+Qfb(-1, 2, 4, 0.E-38)
+[2, 3/4]
+[1, 2; 3/2, 4]
+2*x + y
+[2*x + y]
+content
 2
 1
 Mod(1, 3)
@@ -35,7 +114,7 @@ Mod(1, 3)
 x
 1/2 + 1/3*I
 1/8
-w
+1/3*w
 1/2
 2
 2
@@ -43,4 +122,42 @@ w
 1
 1/4
 1/2
-Total time spent: 0
+1/(2*y)
+1/y*x + 1/2
+(x)->content(x,1)
+2
+1
+1
+2/3
+1
+1/6
+1
+1
+1/2
+2
+2
+1
+1
+1/4
+1/2
+1/2
+1/2
+(x)->content(x,'y)
+1
+1
+1
+1
+1
+1
+1
+1
+1/2
+2
+2
+1
+1
+1
+1
+1/2
+1/y*x + 1/2
+Total time spent: 4
