@@ -13,6 +13,14 @@ BA    2- nfisincl() result uses wrong variable [#2041]
       2- [libpari] rename polcoeff0 -> polcoef, polcoeff_i -> polcoef_i,
          truecoeff -> truecoef
       3- t_LIST corrupted on writebin / read [#2040]
+      4- add optional argument to denominator/content/numerator to allow
+         better control over semantic. E.g.
+         No arg:  denominator([1/2, 1/x, 1/y]) -> 2*y*x
+                  denominator([1/2, 1/x, x/y]) -> 2*x
+                  denominator([x/2, 1/x, 1/y]) -> y*x
+         With arg: denominator(,1) is 2 in all 3 cases
+                   denominator(,x) is x in all 3 cases
+                   denominator(,y) is y in all 3 cases
 
   Added
       1- [libpari] denom_i, numer_i
